
-------------------------------------------------------------------------------

Fri Oct  1 17:01:44 PDT 1999
(Mandrake)

let us place dialog boxes arranged like the rest of the windows in the world

-------------------------------------------------------------------------------

Fri Oct  1 17:11:42 PDT 1999
(Mandrake)

trying to make that about box look a bit more clean.  also took out the
"USE AT YOUR OWN RISK" since we're getting prepped for a release

-------------------------------------------------------------------------------

Fri Oct  1 17:12:04 PDT 1999
(Raster)

fixed really obscure focus bug.....

-------------------------------------------------------------------------------

Fri Oct  1 18:00:54 PDT 1999
(Raster)

pager group dnd patch

-------------------------------------------------------------------------------

Fri Oct  1 18:59:58 PDT 1999
(Raster)

commented somehting out.. stil works.. ho hum.. dunno - expose bug cant be
reporduced right now :)

-------------------------------------------------------------------------------

Fri Oct  1 19:32:02 PDT 1999
(Mandrake)

fixed a warning in evhandlers.c
also, the TODO item is fixed.  Yay!  that was the last bug on the buglist.
snapshot coming out.

-------------------------------------------------------------------------------

Fri Oct  1 19:25:38 PDT 1999
(Raster)

remove raindrops fx from menu - still leaks shm segs like a seive. :)

-------------------------------------------------------------------------------

Fri Oct  1 19:44:55 PDT 1999
(Raster)

chaneg abotu text a little

-------------------------------------------------------------------------------

Sat Oct  2 11:59:40 PDT 1999
(Mandrake)

edited some documentation, also fixed a minor typo in menus.cfg

-------------------------------------------------------------------------------

Sat Oct  2 14:05:27 PDT 1999
(Mandrake)

having the logout dialog autoarrange looked kind of bad - so I have this one
centered again in session.c